8132379: -J options can cause crash or "Warning: app args parsing error passing arguments as-is"

Reviewed-by: ksrini